feat: 입력폼 리팩토링 - DatePicker, CategorySelect, 저축 날짜, 투자 데이터 정리
- DatePicker 컴포넌트 추가 (날짜 선택 UI)
- CategorySelect 컴포넌트 추가 (optgroup 기반 대/소분류 그룹화)
- InputPage 전면 리팩토링 (수입/지출/저축 입력폼 개선)
- 저축(savings) 테이블에 day 컬럼 추가 및 백엔드 반영
- 월별 가계부 캘린더에 저축 일별 표시 (파란색)
- 대시보드 제목 변경, LNB 순서 조정
- 투자 테스트 데이터(3,900,000) 삭제

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+/* 한국어 로케일 date input에서 요일 괄호 (()) 숨기기 */
+input[type="date"]::-webkit-datetime-edit-day-of-week-field {
+  display: none;
+}
+
 @layer base {
   :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
